--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=Santander-2024-Backend-com-Java
 server.port=8082
+
+spring.datasource.url=jdbc:h2:mem:sdw2023
+spring.datasource.username=sdw2023
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
