"Nova atualização base completa de arquivos"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+/*
+Use os seguintes detalhes para se conectar ao banco de dados no console H2:
+
+    JDBC URL: jdbc:h2:mem:sdw2023
+    User Name: sdw2023
+    Password: (deixe em branco)
+
+Se a conexão falhar, verifique se a aplicação está em execução e se as configurações no arquivo application.properties ou application.yml estão corretas.
+*/
+
 spring.application.name=Santander-2024-Backend-com-Java
 server.port=8082
 
